main.tf
provider "aws" {
  region = "ap-southeast-1" # Ganti dengan region yang diinginkan
}

resource "aws_security_group" "dicoding_sg" {
  name        = "dicoding_security_group"
  description = "Allow SSH, HTTP, HTTPS, and custom ports"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 49000
    to_port     = 49000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 50000
    to_port     = 50000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3031
    to_port     = 3031
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9090
    to_port     = 9091
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 2376
    to_port     = 2376
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "dicoding_terraform" {
  ami                    = "ami-0198a868663199764" # AMI Ubuntu 22.04 (update sesuai region)
  instance_type          = "t2.medium"
//   key_name               = "AKIAQ4J5YJFSRTAOHVLO" # Ganti dengan nama key pair Anda
  vpc_security_group_ids = [aws_security_group.dicoding_sg.id]

  root_block_device {
    volume_size = 15
  }

  tags = {
    Name = "Dicoding-Terraform"
  }
}
